--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="nc_display_name_fetched">Display name fetched</string>
     <string name="nc_push_disabled">Push notifications disabled</string>
     <string name="nc_capabilities_failed">Failed to fetch capabilities, aborting</string>
+    <string name="nc_external_server_failed">Failed to fetch signaling settings</string>
     <string name="nc_display_name_not_fetched">Display name couldn\'t be fetched, aborting</string>
     <string name="nc_nextcloud_talk_app_installed">%1$s app found</string>
     <string name="nc_nextcloud_talk_app_not_installed">%1$s app not installed on the server, aborting</string>
